# zlog

./: .gitignore  BUILD.bazel  Dockerfile  README.md  WORKSPACE  docker-compose.yml  go.mod  go.sum  main.go
benchmark/: BUILD.bazel  README.md  logger_test.go  vendor_test.go
cmd/: BUILD.bazel
config/: conf.go  conf_test.go
examples/: BUILD.bazel  sqlite.go
examples/custom_logger/: BUILD.bazel
examples/datastore/buffer/: BUILD.bazel  buffer.go
examples/datastore/db/mongo/: BUILD.bazel  mongo.go
examples/datastore/db/mysql/: BUILD.bazel  mysql.go
examples/datastore/db/postgres/: BUILD.bazel  postgres.go
examples/datastore/db/sqlite/: BUILD.bazel  sqlite.go
examples/datastore/file/: BUILD.bazel  logfile.go
examples/grpc/grpc_multilogger/: BUILD.bazel
examples/grpc/grpc_multilogger/client/: BUILD.bazel  client.go
examples/grpc/grpc_multilogger/server/: BUILD.bazel  server.go
examples/grpc/simple_stream_client_server/client/: BUILD.bazel  client.go
examples/grpc/simple_stream_client_server/server/: BUILD.bazel  server.go
examples/grpc/simple_unary_client_server/client/: BUILD.bazel  client.go
examples/grpc/simple_unary_client_server/server/: BUILD.bazel  server.go
examples/grpc_client_server/client/: BUILD.bazel  client.go
examples/grpc_client_server/server/: BUILD.bazel  server.go
examples/grpc_multilog_client/: BUILD.bazel  client.go
examples/logger/callstack_in_metadata/: BUILD.bazel  callstack_md.go
examples/logger/channeled_logger/: BUILD.bazel  channeled_logger.go
examples/logger/custom_logger/: BUILD.bazel  custom_logger.go
examples/logger/formatted_logger/: BUILD.bazel  formatted_logger.go
examples/logger/log_as_writer/: BUILD.bazel  log_as_writer.go
examples/logger/modular_events/: BUILD.bazel  modular_events.go
examples/logger/multilogger/: BUILD.bazel  multilogger.go
examples/logger/simple_logger/: BUILD.bazel  simple_logger.go
examples/simple_logger/: BUILD.bazel  simple_logger.go
examples/sqlite_store/: BUILD.bazel  sqlite_db.go
grpc/: client.go  server.go
grpc/address/: BUILD.bazel  address.go  address_test.go
grpc/client/: BUILD.bazel  address.go  backoff.go  backoff_test.go  client.go  client_test.go  conf.go  conf_test.go  interceptors.go  logging.go  logging_test.go  multilog.go  multilog_test.go  nilclient.go  nilclient_test.go  timing.go  timing_test.go
grpc/server/: BUILD.bazel  conf.go  conf_test.go  interceptors.go  logging.go  logging_test.go  multilog.go  multilog_test.go  nilserver.go  nilserver_test.go  server.go  server_test.go  timing.go  timing_test.go
grpc/server/interceptors/log/: grpclog.go
log/: BUILD.bazel  channel.go  channel_test.go  conf.go  conf_test.go  format.go  format_test.go  handler.go  logfile.go  logfile_test.go  logger.go  logger_test.go  message.go  message.pb.go  message_test.go  multilog.go  multilog_test.go  print.go  print_test.go  testdata.go  tracing.go  tracing_test.go
log/event/: BUILD.bazel  builder.go  builder_test.go  event.go  event.pb.go  event.proto  event_test.go  field.go  level.go  level_test.go
log/format/bson/: BUILD.bazel  bson.go  bson_test.go
log/format/csv/: BUILD.bazel  csv.go  csv_test.go
log/format/gob/: BUILD.bazel  gob.go  gob_test.go
log/format/json/: BUILD.bazel  json.go  json_test.go
log/format/protobuf/: BUILD.bazel  protobuf.go  protobuf_test.go
log/format/text/: BUILD.bazel  text.go  text_test.go
log/format/xml/: BUILD.bazel  xml.go  xml_test.go
log/logch/: BUILD.bazel  channel.go  channel_test.go  logch.go  logch_test.go
log/trace/: BUILD.bazel  trace.go  trace_test.go
proto/: conf.go  event.proto  gen_pbgo.sh  message.proto  server.go  service.proto
proto/client/: address.go  client.go  conf.go
proto/message/: context.go  message.go  message.pb.go
proto/server/: conf.go  server.go
proto/service/: BUILD.bazel  service.go  service.pb.go
store/: BUILD.bazel  logfile.go  logfile_test.go  nilwritter.go  nilwritter_test.go
store/db/: BUILD.bazel  db.go  db_test.go
store/db/message/: BUILD.bazel  model.go  model_test.go
store/db/mongo/: BUILD.bazel  mongo.go  mongo_test.go
store/db/mysql/: BUILD.bazel  mysql.go  mysql_test.go
store/db/postgres/: BUILD.bazel  postgres.go  postgres_test.go
store/db/sqlite/: BUILD.bazel  sqlite.go  sqlite_test.go
store/fs/: BUILD.bazel  logfile.go  logfile_test.go
store/sql/: model.go
store/sql/mongo/: mongo.go
store/sql/mysql/: mysql.go
store/sql/postgres/: postgres.go
store/sql/sqlite/: sqlite.go  verify.go
