load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "examples_lib",
    srcs = ["sqlite.go"],
    importpath = "github.com/zalgonoise/zlog/examples",
    visibility = ["//visibility:private"],
    deps = [
        "//log",
        "//log/event",
        "//store/db/mongo",
    ],
)

go_binary(
    name = "examples",
    embed = [":examples_lib"],
    visibility = ["//visibility:public"],
)
