load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "log",
    srcs = [
        "channel.go",
        "conf.go",
        "format.go",
        "logger.go",
        "multilog.go",
        "print.go",
        "testdata.go",
    ],
    importpath = "github.com/zalgonoise/zlog/log",
    visibility = ["//visibility:public"],
    deps = [
        "//grpc/address",
        "//log/event",
        "//log/format/bson",
        "//log/format/csv",
        "//log/format/gob",
        "//log/format/json",
        "//log/format/protobuf",
        "//log/format/text",
        "//log/format/xml",
        "//store",
        "//store/db",
    ],
)

go_test(
    name = "log_test",
    srcs = [
        "channel_test.go",
        "conf_test.go",
        "format_test.go",
        "logger_test.go",
        "multilog_test.go",
        "print_test.go",
    ],
    embed = [":log"],
    deps = [
        "//grpc/address",
        "//log/event",
        "//log/format/bson",
        "//log/format/csv",
        "//log/format/gob",
        "//log/format/json",
        "//log/format/text",
        "//store",
        "@org_mongodb_go_mongo_driver//bson",
    ],
)
