load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "log",
    srcs = [
        "conf.go",
        "format.go",
        "logger.go",
        "multilog.go",
        "print.go",
    ],
    importpath = "github.com/zalgonoise/zlog/log",
    visibility = ["//visibility:public"],
    deps = [
        "//grpc/address",
        "//log/event",
        "//log/format/bson",
        "//log/format/csv",
        "//log/format/gob",
        "//log/format/json",
        "//log/format/protobuf",
        "//log/format/text",
        "//log/format/xml",
        "//store",
        "//store/db",
    ],
)

go_test(
    name = "log_test",
    srcs = [
        "conf_test.go",
        "logger_test.go",
        "multilog_test.go",
        "print_test.go",
    ],
    embed = [":log"],
    deps = [
        "//grpc/address",
        "//log/event",
        "//log/format/text",
        "//store",
    ],
)
