load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "simple_logger_lib",
    srcs = ["simple_logger.go"],
    importpath = "github.com/zalgonoise/zlog/examples/simple_logger",
    visibility = ["//visibility:private"],
    deps = ["//log"],
)

go_binary(
    name = "simple_logger",
    embed = [":simple_logger_lib"],
    visibility = ["//visibility:public"],
)
