load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "sqlite_store_lib",
    srcs = ["sqlite_db.go"],
    importpath = "github.com/zalgonoise/zlog/examples/sqlite_store",
    visibility = ["//visibility:private"],
    deps = [
        "//log",
        "//log/event",
        "//store/db/sqlite",
    ],
)

go_binary(
    name = "sqlite_store",
    embed = [":sqlite_store_lib"],
    visibility = ["//visibility:public"],
)
