load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "client",
    srcs = [
        "backoff.go",
        "client.go",
        "conf.go",
        "logging.go",
        "timing.go",
    ],
    importpath = "github.com/zalgonoise/zlog/grpc/client",
    visibility = ["//visibility:public"],
    deps = [
        "//grpc/address",
        "//log",
        "//log/event",
        "//proto/service",
        "@com_github_grpc_ecosystem_go_grpc_middleware//:go-grpc-middleware",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//status",
    ],
)
