load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "client",
    srcs = [
        "backoff.go",
        "client.go",
        "conf.go",
        "logging.go",
        "multilog.go",
        "timing.go",
    ],
    importpath = "github.com/zalgonoise/zlog/grpc/client",
    visibility = ["//visibility:public"],
    deps = [
        "//grpc/address",
        "//log",
        "//log/event",
        "//log/logch",
        "//proto/service",
        "@com_github_grpc_ecosystem_go_grpc_middleware//:go-grpc-middleware",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//status",
    ],
)

go_test(
    name = "client_test",
    srcs = [
        "backoff_test.go",
        "client_test.go",
        "conf_test.go",
        "logging_test.go",
        "timing_test.go",
    ],
    embed = [":client"],
    deps = [
        "//grpc/address",
        "//grpc/server",
        "//log",
        "//log/event",
        "//log/format/json",
        "//proto/service",
        "//store/fs",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//metadata",
    ],
)
