load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "server",
    srcs = [
        "conf.go",
        "logging.go",
        "multilog.go",
        "nilserver.go",
        "server.go",
        "timing.go",
    ],
    importpath = "github.com/zalgonoise/zlog/grpc/server",
    visibility = ["//visibility:public"],
    deps = [
        "//log",
        "//log/event",
        "//proto/service",
        "@com_github_google_uuid//:uuid",
        "@com_github_grpc_ecosystem_go_grpc_middleware//:go-grpc-middleware",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//reflection",
        "@org_golang_google_grpc//status",
    ],
)

go_test(
    name = "server_test",
    srcs = [
        "conf_test.go",
        "logging_test.go",
        "multilog_test.go",
        "nilserver_test.go",
        "server_test.go",
        "timing_test.go",
    ],
    embed = [":server"],
    deps = [
        "//log",
        "//log/event",
        "//proto/service",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//status",
    ],
)
