load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "trace",
    srcs = ["trace.go"],
    importpath = "github.com/zalgonoise/zlog/log/trace",
    visibility = ["//visibility:public"],
)

go_test(
    name = "trace_test",
    srcs = ["trace_test.go"],
    embed = [":trace"],
)
