load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "buffer_lib",
    srcs = ["buffer.go"],
    importpath = "github.com/zalgonoise/zlog/examples/datastore/buffer",
    visibility = ["//visibility:private"],
    deps = [
        "//log",
        "//log/event",
    ],
)

go_binary(
    name = "buffer",
    embed = [":buffer_lib"],
    visibility = ["//visibility:public"],
)
