load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "grpc_multilog_client_lib",
    srcs = ["client.go"],
    importpath = "github.com/zalgonoise/zlog/examples/grpc_multilog_client",
    visibility = ["//visibility:private"],
    deps = [
        "//grpc/address",
        "//grpc/client",
        "//log",
        "//log/event",
    ],
)
