load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "client_lib",
    srcs = ["client.go"],
    importpath = "github.com/zalgonoise/zlog/examples/grpc_client_server/client",
    visibility = ["//visibility:private"],
    deps = [
        "//grpc/client",
        "//log",
        "//log/event",
    ],
)

go_binary(
    name = "client",
    embed = [":client_lib"],
    visibility = ["//visibility:public"],
)
