load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "callstack_in_metadata_lib",
    srcs = ["callstack_md.go"],
    importpath = "github.com/zalgonoise/zlog/examples/logger/callstack_in_metadata",
    visibility = ["//visibility:private"],
    deps = [
        "//log",
        "//log/event",
    ],
)

go_binary(
    name = "callstack_in_metadata",
    embed = [":callstack_in_metadata_lib"],
    visibility = ["//visibility:public"],
)
