load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "log_as_writer_lib",
    srcs = ["log_as_writer.go"],
    importpath = "github.com/zalgonoise/zlog/examples/logger/log_as_writer",
    visibility = ["//visibility:private"],
    deps = [
        "//log",
        "//log/event",
    ],
)

go_binary(
    name = "log_as_writer",
    embed = [":log_as_writer_lib"],
    visibility = ["//visibility:public"],
)
