load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "modular_events_lib",
    srcs = ["modular_events.go"],
    importpath = "github.com/zalgonoise/zlog/examples/logger/modular_events",
    visibility = ["//visibility:private"],
    deps = [
        "//log",
        "//log/event",
    ],
)

go_binary(
    name = "modular_events",
    embed = [":modular_events_lib"],
    visibility = ["//visibility:public"],
)
