load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "multilogger_lib",
    srcs = ["multilogger.go"],
    importpath = "github.com/zalgonoise/zlog/examples/logger/multilogger",
    visibility = ["//visibility:private"],
    deps = [
        "//log",
        "//log/event",
    ],
)

go_binary(
    name = "multilogger",
    embed = [":multilogger_lib"],
    visibility = ["//visibility:public"],
)
