load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "bson",
    srcs = ["bson.go"],
    importpath = "github.com/zalgonoise/zlog/log/format/bson",
    visibility = ["//visibility:public"],
    deps = [
        "//log/event",
        "@org_mongodb_go_mongo_driver//bson",
    ],
)
