load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "bson",
    srcs = ["bson.go"],
    importpath = "github.com/zalgonoise/zlog/log/format/bson",
    visibility = ["//visibility:public"],
    deps = [
        "//log/event",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_mongodb_go_mongo_driver//bson",
    ],
)

go_test(
    name = "bson_test",
    srcs = ["bson_test.go"],
    embed = [":bson"],
    deps = ["//log/event"],
)
