load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "csv",
    srcs = ["csv.go"],
    importpath = "github.com/zalgonoise/zlog/log/format/csv",
    visibility = ["//visibility:public"],
    deps = [
        "//log/event",
        "//log/format/text",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)

go_test(
    name = "csv_test",
    srcs = ["csv_test.go"],
    embed = [":csv"],
    deps = ["//log/event"],
)
