load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "gob",
    srcs = ["gob.go"],
    importpath = "github.com/zalgonoise/zlog/log/format/gob",
    visibility = ["//visibility:public"],
    deps = [
        "//log/event",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)

go_test(
    name = "gob_test",
    srcs = ["gob_test.go"],
    embed = [":gob"],
    deps = ["//log/event"],
)
