load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "json",
    srcs = ["json.go"],
    importpath = "github.com/zalgonoise/zlog/log/format/json",
    visibility = ["//visibility:public"],
    deps = [
        "//log/event",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)

go_test(
    name = "json_test",
    srcs = ["json_test.go"],
    embed = [":json"],
    deps = ["//log/event"],
)
